--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 <body>
     <!-- header start -->
     <header>
-
+        <div class="header-section">
+            <div class="info">
+                <h1>Conmebol</h1>
+                <h1>Copa America</h1>
+                <h1>2021</h1>
+                <button type="submit">Watch Live</button>
+            </div>
+            <div class="header-logo">
+                <img src="images/banner.png" alt="">
+            </div>
+        </div>
     </header>
     <!-- header end -->
 
